
2007-03-22 cjg
 * Added Comment to the Platform file
 * Added warning if exec() is not passed a repository parameter

2007-03-22 cjg
 * Fixed bug in epadmin that didn't use the groupid set in SystemSettings for
    making new repository files.

2007-03-22 cjg
 * Change to make the document roll-up always open if there's but one 
    document.

2007-03-22 cjg
 * Caused only .xml files to be loaded in phrase directories.
	
2007-03-22 cjg
 * Removed debug code from Rewrite

2007-03-22 cjg
 * Sorted out XHTML validation. Involved removing some accept-charset 
    attributes, changing forms from GET to get, changing the way css 
    works with/without javascript and adding an alt="" tag.

2007-03-22 cjg
 * Fixed bug which meant two subsequent 404's on one apache connection would
    blank the 2nd one.

2007-03-22 cjg
 * Fixed an issue which meant that after removing a user the system went to 
    an undefined screen. Now goes to the front which isn't ideal, but is 
    better.

2007-03-22 cjg
 * XML import finding an incorrect top level tag now tells you what it was
    actually expecting. In the case of Import::XML getting <eprintsdata> it
    gives some advice about v2 and v3 XML files.

2007-03-22 cjg
 * Changed "authors" to "creators" in endnote plugin.

2007-03-22 cjg
 * Used the tool divide phrase instead of hardwiring "|"

2007-03-22 cjg
 * Commented out heavy regexps in indexer.pl

2007-03-22 tdb
 * Removed executable properties
 * Added license statement to ScreenProcessor

2007-03-22 tdb
 * Missed size adjustment from modified df_free

2007-03-22 tdb
 * Removed use of prepare_cmd from Convert plugins (now uses $repository->exec)

2007-03-23 tdb
 * Fix Convert plugins that I broke yesterday
 * Add 'html_phrase_id' method to Plugin, to get the phrase id (used by
    Convert)

2007-03-23 tdb
 * Added draft conversion option to document upload page
 * Made Unpack work
 * Few robustness changes to Convert plugins

